# controllers/jogoController.js
@@ -1,4 +1,4 @@
-import Database from "../db/database";
+import Database from "../db/database.js";
 import JogoEntity from "../entities/jogoEntity.js";
 import JogoRepository from "../repositories/jogoRepository.js";
 import SalaEntity from "../entities/salaEntity.js";
@@ -18,26 +18,32 @@ export default class JogoController{
                 let sala = new SalaEntity(idSala, "", "");
                 let salaRepo = new SalaRepository(banco);
                 let salaValidacao = await salaRepo.obterSalaPorId(sala);
+                let numeroJogadores = await salaRepo.obterNumeroJogadores(sala);
                 if(salaValidacao.length > 0){
-                    let repo = new JogoRepository(banco);
-                    let jogo = await repo.IniciarJogo(jogoEntity);
-    
-                    if(jogo){
-                        await banco.Commit();
-                        res.status(200).json(jogo);
+                    if(numeroJogadores == 4){
+                        let repo = new JogoRepository(banco);
+                        let jogo = await repo.iniciarJogo(jogoEntity);
+        
+                        if(jogo){
+                            await banco.Commit();
+                            res.status(200).json(jogo);
+                        }
+                    }else{
+                        res.status(400).json({msg: "Sala não possui 4 jogadores"});
                     }
+ 
                 }else{
-                    res.status(400).json({mensagem: "Sala não encontrada"});
+                    res.status(400).json({msg: "Sala não encontrada"});
                     return;
                 }
 
 
             }else{
-                res.status(400).json({mensagem: "Id da sala não informado"});
+                res.status(400).json({msg: "Id da sala não informado"});
             }
         }catch(ex){
             await banco.Rollback();
-            res.status(500).json({mensagem: "Erro ao iniciar partida ->", erro: ex});
+            res.status(500).json({msg: "Erro ao iniciar partida ->", erro: ex});
         }
     }
 
