# routes/jogoRoute.js
@@ -4,8 +4,10 @@ import jogoController from '../controllers/jogoController.js';
 const router = express.Router();
 const ctrl = new jogoController();
 
-router.get('/jogo/:idSala', (req, res) => {
+router.get('/:idSala', (req, res) => {
 
 
     ctrl.IniciarJogo(req, res);
 });
+
+export default router;
