# swagger-output.json
@@ -237,6 +237,32 @@
           }
         }
       }
+    },
+    "/jogo/{idSala}": {
+      "get": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "idSala",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
     }
   },
   "components": {
